--- a/playbill/edit/edit_program.html
+++ b/playbill/edit/edit_program.html
@@ -12,7 +12,7 @@
 <body>
 <div id="body">
 <div id="program_info">
-<span style="font-size: 22px;">劇目信息：</span><br>
+<span style="font-size: 20px;">請輸入劇名以添加、修改或刪除劇目信息：</span><br>
 (Pleast hit "Enter" after typing.)
 <br>
 <div id="p_num"></div>
@@ -31,7 +31,10 @@
 	<input type="radio" name="type" id="cai" checked onclick="get_radio();"> 彩唱
 	<input type="radio" name="type" id="qing" onclick="get_radio();"> 清唱
 </form>
-
+<div class="del" id="del_program">
+	<a href="javascript:del_program();">刪除</a>
+</div>
+<br>
 <span style="color:red">*</span>劇目簡介: (Use "NULL" if none)<br>
 <textarea wrap="on" id="Synopsis" style="height:100px;width:600px;margin-bottom: -5px;"></textarea><br>
 <span style="color:red">*</span>Synopsis: (Use "NULL" if none)<br>
@@ -117,21 +120,15 @@ must split by "@"
 <br>
 ———————————————————————
 </div><!--role_info-->
-<div class="new" id="new_program">
-	<a href="javascript:add_program();">+劇目</a>
-</div>
-<div class="del" id="del_program">
-	<a href="javascript:del_program();">-劇目</a>
-</div>
+
 <div id="alert1" style="color:red;"></div>
-===============================================
 </div><!--program_info-->
-或，劇目添加完成
+或，信息添加/修改完成
 <br>
 <div class="new" id="next" >
-	<a href="javascript:process();">下一步</a>
+	<a href="javascript:process();">提交</a>
 </div>
 <div id="alert2" style="color:red; margin-bottom: 50px;"></div>
 </div><!--body-->
-<script type="text/javascript" src="new_program.js"></script>
+<script type="text/javascript" src="edit_program.js"></script>
 </body>
