--- a/playbill/edit/edit_orchestra.html
+++ b/playbill/edit/edit_orchestra.html
@@ -2,7 +2,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <head>
-	<title id="title">請輸入樂器名稱以添加、修改或刪除樂隊信息</title>
+	<title id="title">修改樂隊</title>
 	<script src="/jquery-1.11.2.min.js"></script>
 	<script src="/jquery-ui.js"></script>
 	<link rel="stylesheet" href="/jquery-ui.css">
@@ -12,7 +12,7 @@
 <body>
 
 <div id="body">
-<span style="font-size: 22px;">樂隊信息：</span><br>
+<span style="font-size: 22px;">請輸入樂器名稱以添加、修改或刪除樂隊信息：</span><br>
 (Pleast hit "Enter" after typing.)<br>
 <div id="instrument_info">
 <div id="instrument0">
@@ -21,7 +21,7 @@
 <span style="display: inline-block;width: 100px; padding-left:50px;"><span style="color:red">*</span>Instrument</span>
 <input type="text" id="instrument0_EN_name" style="height:20px;"><br>
 <div class="del" id="del_instrument">
-	<a href="javascript:del_instrumrnt();">刪除</a>
+	<a href="javascript:del_instrument();">刪除</a>
 </div>
 <br>
 ------------------------------------------
