--- a/playbill/edit/edit_staff.html
+++ b/playbill/edit/edit_staff.html
@@ -2,7 +2,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <head>
-	<title id="title">請輸入樂器名稱以添加、修改或刪除工作人員信息</title>
+	<title id="title">修改工作人員</title>
 	<script src="/jquery-1.11.2.min.js"></script>
 	<script src="/jquery-ui.js"></script>
 	<link rel="stylesheet" href="/jquery-ui.css">
@@ -12,7 +12,7 @@
 <body>
 
 <div id="body">
-<span style="font-size: 22px;">工作人員信息：</span><br>
+<span style="font-size: 22px;">請輸入職能及姓名以添加、修改或刪除工作人員信息：</span><br>
 (Pleast hit "Enter" after typing.)<br>
 <div id="funct_info">
 <div id="funct0">
